// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInMemoryTable behavior pagination 1`] = `
<nav
  aria-label="Pagination for table: "
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 2 of 2
  </span>
  <a
    aria-controls="__table_generated-id"
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    href="#__table_generated-id"
    rel="noreferrer"
    title="Previous page"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </a>
  <ul
    aria-label="Pagination for table: "
    class="euiPagination__list emotion-euiPagination__list"
  >
    <li
      class="euiPagination__item"
    >
      <a
        aria-controls="__table_generated-id"
        aria-label="Page 1 of 2"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-0"
        href="#__table_generated-id"
        rel="noreferrer"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </a>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-controls="__table_generated-id"
        aria-current="true"
        aria-label="Page 2 of 2"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
        data-test-subj="pagination-button-1"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            2
          </span>
        </span>
      </button>
    </li>
  </ul>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-next"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
</nav>
`;

exports[`EuiInMemoryTable empty array 1`] = `
<div
  aria-label="aria-label"
  class="euiBasicTable testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div>
    <div
      class="euiTableHeaderMobile"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-l-spaceBetween-baseline-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        />
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        />
      </div>
    </div>
    <table
      class="euiTable css-0 euiTable--responsive"
      id="__table_generated-id"
      tabindex="-1"
    >
      <caption
        class="euiTableCaption emotion-euiScreenReaderOnly"
      />
      <thead>
        <tr>
          <th
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_name_0"
            role="columnheader"
            scope="col"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
                title="Name; description"
              >
                Name
              </span>
              <span
                class="emotion-euiScreenReaderOnly"
              >
                description
              </span>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class="css-0"
      >
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
            colspan="1"
          >
            <div
              class="euiTableCellContent euiTableCellContent--alignCenter"
            >
              <span
                class="euiTableCellContent__text"
              >
                No items found
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`EuiInMemoryTable with executeQueryOptions 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2 emotion-euiTestCss"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  noItemsMessage={
    <EuiI18n
      default="No items found"
      token="euiBasicTable.noItemsMessage"
    />
  }
  onChange={[Function]}
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with items 1`] = `
<div
  aria-label="aria-label"
  class="euiBasicTable testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div>
    <div
      class="euiTableHeaderMobile"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-l-spaceBetween-baseline-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        />
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        />
      </div>
    </div>
    <table
      class="euiTable css-0 euiTable--responsive"
      id="__table_generated-id"
      tabindex="-1"
    >
      <caption
        class="euiTableCaption emotion-euiScreenReaderOnly"
      />
      <thead>
        <tr>
          <th
            class="euiTableHeaderCell"
            data-test-subj="tableHeaderCell_name_0"
            role="columnheader"
            scope="col"
          >
            <span
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
                title="Name; description"
              >
                Name
              </span>
              <span
                class="emotion-euiScreenReaderOnly"
              >
                description
              </span>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class="css-0"
      >
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            <div
              class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Name
            </div>
            <div
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              >
                name1
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            <div
              class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Name
            </div>
            <div
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              >
                name2
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="euiTableRow"
        >
          <td
            class="euiTableRowCell euiTableRowCell--middle"
          >
            <div
              class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
            >
              Name
            </div>
            <div
              class="euiTableCellContent"
            >
              <span
                class="euiTableCellContent__text"
              >
                name3
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
